--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "youtuber-voting",
+  "name": "event-booking-api",
   "version": "1.0.0",
   "description": "",
+  "homepage": "http://rutasip.github.io/event-booking-api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "dataloader": "^2.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.3",
@@ -19,6 +22,7 @@
     "mongoose": "^5.6.11"
   },
   "devDependencies": {
+    "gh-pages": "^2.1.1",
     "nodemon": "^1.19.1"
   }
 }
