--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +21,6 @@
     "mongoose": "^5.6.11"
   },
   "devDependencies": {
-    "gh-pages": "^2.1.1",
     "nodemon": "^1.19.1"
   }
 }
